--- a/package.json
+++ b/package.json
@@ -8,10 +8,25 @@
   },
   "devDependencies": {
     "axios": "^0.15.2",
-    "bootstrap-sass": "^3.3.7",
-    "jquery": "^3.1.0",
-    "laravel-mix": "^0.5.0",
-    "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.10.0",
+    "img-loader": "^1.3.1",
+    "node-sass": "^4.4.0",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "select2": "^4.0.3",
+    "tether": "^1.4.0"
   }
 }
